k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: mveyone/todo-mern-api:latest
          ports:
            - containerPort: 4000
          # env:
          #   - name: "MONGO_URI"
          #     value: "mongodb+srv://admin:pass123@mydatabase.e8dfosi.mongodb.net/workout8s7?retryWrites=true&w=majority"
          #   - name : "PORT"
          #     value: "4000"
          #   - name : "SECRET"
          #     value: "INGODWETRUST140989142207"
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 4000
      targetPort: 4000
