k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: mveyone/todo-build-nginx-prod:latest
          ports:
            - containerPort: 3000 # port of dockerfile
              protocol: TCP
          # env:
          #   - name: "REACT_APP_PROXY_HOST"
          #     value: "http://api-service"
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  selector:
    component: client # name of client deploy
  ports:
    - port: 3000
      targetPort: 3000 # internal port of container
