k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-workouts
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: workouts.com
      http:
          paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
          - path: /api(.*)
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
